# uniz-master

./: $image..."  .dockerignore  .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REDEPLOY.md  SECURITY.md  UNIZ_TECHNICAL_ARCHITECTURE.md  UniZ_Final_Report.md  app_password.txt  attendance_filled.xlsx  build_amd64.sh  build_local.sh  build_local_files.sh  build_local_gateway.sh  build_test_images.sh  check-sem-status.ts  check-users.ts  conflicts.txt  db.env  detailed_schema_report.txt  diff.txt  docker-compose.yml  final_grades_filled.xlsx  fix_academic_controller.js  full_db_schema_export.txt  generate_latex.py  grades_CSE_E2_SEM-1_template.xlsx  last_deploy_trigger.txt  main_deploy.yml  package-lock.json  package.json  protection.json  remedial_test.xlsx  secrets.env.example  test-grades-upload.mjs  (+10 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
admissiondata/: 2020-21_RGUKT AP_ONGOLE(20)F.xlsx  2021 ONGOLE ADMISSIONS DATA.xlsx  Final_Combined_Admissions.xlsx  ONGOLE UG-Admissions2022-23 - COMPLETE DATA after counselling from dean office(22).xlsx
apps/uniz-landing-backend/: .dockerignore  .gitignore  Dockerfile  config.py  database.py  dependencies.py  docker-compose.yml  docker-compose.yml.vps  main.py  migrate.py  models.py  pyproject.toml  schemas.py  unizlanding.db
apps/uniz-landing-backend/routers/: academics.py  analytics.py  departments.py  home.py  institute.py  notifications.py
brain/: INFRASTRUCTURE_AND_CODEBASE_OVERVIEW.md  knowledge_graph.md  persistent_system_intelligence.md  shared_vps_protocol.md
(+2482 files in other folders)
