[project]
name = "uniz-landing-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "sqlalchemy>=2.0.48",
    "bcrypt==4.0.1",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "requests>=2.32.5",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
]
